--- a/packages.config
+++ b/packages.config
@@ -1,24 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net472" />
-  <package id="ExCSS" version="4.2.5" targetFramework="net472" />
+  <package id="ExCSS" version="4.3.0" targetFramework="net472" />
   <package id="Fizzler" version="1.3.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.27.1" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.3.8" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.3.8" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights" version="2.22.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Testing.Extensions.Telemetry" version="1.5.3" targetFramework="net472" />
+  <package id="Microsoft.Testing.Extensions.TrxReport.Abstractions" version="1.5.3" targetFramework="net472" />
+  <package id="Microsoft.Testing.Extensions.VSTestBridge" version="1.5.3" targetFramework="net472" />
+  <package id="Microsoft.Testing.Platform" version="1.5.3" targetFramework="net472" />
+  <package id="Microsoft.Testing.Platform.MSBuild" version="1.5.3" targetFramework="net472" />
+  <package id="Microsoft.TestPlatform.ObjectModel" version="17.12.0" targetFramework="net472" />
   <package id="MySql.Data" version="8.4.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="NUnit" version="4.1.0" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="5.0.0" targetFramework="net472" />
   <package id="RibbonWinForms" version="5.0.1.1" targetFramework="net472" />
   <package id="Svg" version="3.4.7" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net472" />
   <package id="System.IO.Pipelines" version="8.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
   <package id="System.Text.Json" version="8.0.5" targetFramework="net472" />
